<resources>
    <string name="app_name">Dear Diary</string>


    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>

    <string name="text_button_login">Login</string>
    <string name="text_button_reset">Reset</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="text_title_post">Title</string>
    <string name="text_title_message">Message</string>
    <string name="btn_date">Date</string>

    <string name="text_button_simpan">Save</string>
    <string name="text_button_edit">Edit</string>
    <string name="text_button_delete">Delete</string>
</resources>
