<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.isnaini.deardiary.ui.AddPostActivity"
    android:background="@color/colorTextWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/color_grayMuda"
                android:inputType="text"
                android:textSize="@dimen/ukuran_teks_add"
                android:hint="@string/text_title_post"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_date"
                    android:background="@color/color_transp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/ukuran_teks_button"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:textSize="@dimen/ukuran_teks_isi"
                    android:textColor="@color/colorTextGray"
                    android:gravity="center_vertical"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="image"/>

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/color_grayMuda"
                android:inputType="textMultiLine"
                android:textSize="@dimen/ukuran_teks_add"
                android:hint="@string/text_title_message"
                android:gravity="top"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_simpan"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextWhite"
        android:textStyle="bold"
        android:textSize="@dimen/ukuran_teks_button"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
