<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isnaini.deardiary.ui.DetailPostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/yellowcircles"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/colorTextWhite"
                android:text="@string/text_title_post"
                android:textSize="@dimen/ukuran_teks_add"
                android:hint="@string/text_title_post"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/ukuran_teks_isi"
                    android:textColor="@color/colorTextGray"
                    android:gravity="center_vertical"
                    android:text="@string/btn_date" />


            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/colorTextWhite"
                android:inputType="textMultiLine"
                android:textSize= "@dimen/ukuran_teks_add"
                android:text="@string/text_title_message"
                android:gravity="top"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
